kubernetes/apps/kavita/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-private
  namespace: kavita
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kavita.homelab-peej.dev
      secretName: kavita-internal-tls-secret
  rules:
    - host: kavita.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: kavita
                port:
                  number: 5000
            path: /
            pathType: Prefix
